# professor-agent

./: .env.example  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: agents.py  cli_formatting.py  cli_handlers.py  graph.py  models.py  prompts.py  tools.py
scripts/: test_curriculum_agent.py  test_lecture_agent.py  test_main.py
